fix: CSS text alignment for portfolio-summary__header on desktop fix

--- a/resources/styles/03_organisms/_portfolio-summary.scss
+++ b/resources/styles/03_organisms/_portfolio-summary.scss
@@ -132,6 +132,7 @@
             padding: 0 $padding-large 0 0;
             width: 50%;
             overflow: hidden;
+            text-align: right;
         }
     }
 
